Bug 191297 - title attribute on style & link elements should be ignored inside a shadow tree
Summary: title attribute on style & link elements should be ignored inside a shadow tree
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL:
Keywords: InRadar
Depends on:
Blocks: 148695
  Show dependency treegraph
 
Reported: 2018-11-05 22:13 PST by Ryosuke Niwa
Modified: 2018-12-03 12:33 PST (History)
6 users (show)

See Also:


Attachments
Fixes the bug (18.70 KB, patch)
2018-11-30 20:55 PST, Ryosuke Niwa
koivisto: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 Radar WebKit Bug Importer 2018-11-30 20:51:47 PST
<rdar://problem/46392352>
Comment 2 Ryosuke Niwa 2018-11-30 20:55:11 PST
Created attachment 356289 [details]
Fixes the bug
Comment 3 Ryosuke Niwa 2018-12-03 12:33:26 PST
Committed r238812: <https://trac.webkit.org/changeset/238812>